[package]
name = "toolhub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast_qr = { version = "0.9.0", features = ["image"] }
image = "0.22"
bardecoder = "0.2.2"
magick_rust = "0.18.0"
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]


